--- a/financial.html
+++ b/financial.html
@@ -15,9 +15,8 @@
     <link href="css/style2.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="css/bs_leftnavi.css">
     <script src="js/bs_leftnavi.js"></script>
-
-
-
+	
+	<!-- tamnahinin -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
