--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <img src="css/img/logo_login.png" alt=""/>
 
                     </div>
-				<form>
+				<form action="index2.html">
 
 					<li>
 						<input type="text" class="text" value="Username" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" ><a href="#" class=" icon user"></a>
@@ -34,7 +34,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</li>
 					<div class="p-container">
 								<label class="checkbox"><input type="checkbox" name="checkbox" checked><i></i>Remember Me</label>
-								<input type="submit" onclick="window.open('index2.html')" value="Sign In" >
+								<input type="submit" value="Sign In" >
 							<div class="clear"> </div>
 					</div>
 				</form>
