--- a/production.html
+++ b/production.html
@@ -237,7 +237,9 @@
                     <div class="graphic_title">QHSE Performance</div>
                     <div class="graphic_subtitle">Periode: June 2015</div>
                 </div>
-                <img src="css/img/graphic3.png"/>
+                <div class="graphic-chart">
+                            <img src="css/img/graphic3.png"/>
+				</div>
             </div>
     </div>
 
@@ -263,7 +265,9 @@
                     <div class="graphic_title">QHSE Lagging Indicator</div>
                     <div class="graphic_subtitle"></div>
                 </div>
-                <img src="css/img/graphic4.png"/>
+               <div class="graphic-chart">
+                            <img src="css/img/graphic4.png"/>
+				</div>
             </div>
     </div>
 
@@ -289,7 +293,9 @@
                     <div class="graphic_title">QHSE Training Attend</div>
                     <div class="graphic_subtitle"></div>
                 </div>
-                <img src="css/img/graphic5.png"/>
+                <div class="graphic-chart">
+                            <img src="css/img/graphic5.png"/>
+				</div>
             </div>
     </div>
 
@@ -315,7 +321,9 @@
                     <div class="graphic_title">QHSE Security Incident</div>
                     <div class="graphic_subtitle">Year to date: 2015<br/>Value: 8 Case</div>
                 </div>
-                <img src="css/img/graphic6.png"/>
+                <div class="graphic-chart">
+                            <img src="css/img/graphic6.png"/>
+				</div>
             </div>
         </div>
     <div class="col-md-4">
@@ -340,7 +348,9 @@
                     <div class="graphic_title">Closure Action vs Near Miss</div>
                     <div class="graphic_subtitle"></div>
                 </div>
-                <img src="css/img/graphic7.png"/>
+                <div class="graphic-chart">
+                            <img src="css/img/graphic7.png"/>
+				</div>
             </div>
         </div>
 </div>
