--- a/safety.html
+++ b/safety.html
@@ -240,7 +240,9 @@
                 <div class="graphic_title">QHSE Security Incident</div>
                 <div class="graphic_subtitle">Year to date: 2015<br/>Value: 8 Case</div>
             </div>
-            <img src="css/img/graphic6.png"/>
+            <div class="graphic-chart">
+                            <img src="css/img/graphic6.png"/>
+				</div>
         </div>
     </div>
 </div>
