--- a/stakeholder.html
+++ b/stakeholder.html
@@ -240,7 +240,9 @@
                 <div class="graphic_title">QHSE Lagging Indicator</div>
                 <div class="graphic_subtitle"></div>
             </div>
-            <img src="css/img/graphic4.png"/>
+            <div class="graphic-chart">
+                            <img src="css/img/graphic4.png"/>
+				</div>
         </div>
     </div>
 
@@ -266,7 +268,9 @@
                 <div class="graphic_title">QHSE Training Attend</div>
                 <div class="graphic_subtitle"></div>
             </div>
-            <img src="css/img/graphic5.png"/>
+            <div class="graphic-chart">
+                            <img src="css/img/graphic5.png"/>
+				</div>
         </div>
     </div>
 </div>
