--- a/index2.html
+++ b/index2.html
@@ -72,7 +72,7 @@
                         <a href="#">Configuration Setting<span class="fa fa-angle-down"></span></a>
                         <ul class="sublevel">
                             <li><a href="#">Template</a></li>
-                            <li><a href="#">Template Editor</a></li>
+                            <li><a href="templateeditor.html">Template Editor</a></li>
                         </ul>
                     </li>
 
@@ -155,7 +155,7 @@
                             <li><a href="production.html">Module</a></li>
                             <li><a href="production.html">Menu</a></li>
                             <li><a href="production.html">Audit Trail</a></li>
-                            <li><a href="production.html">Artifact Designer</a></li>
+                            <li><a href="artifactdesigner.html">Artifact Designer</a></li>
                             <li><a href="production.html">Log Out</a></li>
 
                 </ul>
